--- a/front/package.json
+++ b/front/package.json
@@ -14,8 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@primevue/themes": "^4.0.7",
     "axios": "^1.7.4",
     "pinia": "^2.1.7",
+    "primevue": "^4.0.7",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0",
     "uuidv4": "^6.2.13",
