--- a/front/package.json
+++ b/front/package.json
@@ -17,6 +17,7 @@
     "@primevue/themes": "^4.0.7",
     "axios": "^1.7.4",
     "pinia": "^2.1.7",
+    "primeicons": "^7.0.0",
     "primevue": "^4.0.7",
     "socket.io-client": "^4.7.5",
     "uuid": "^10.0.0",
