--- a/back/package.json
+++ b/back/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.3.2",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.3.2",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mongoose": "^10.0.10",
@@ -28,6 +29,7 @@
     "@nestjs/platform-socket.io": "^10.4.1",
     "@nestjs/websockets": "^10.4.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.7.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
